some additions to documentation
